--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>Fortune Teller</title>
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
 </head>
 <body>
     {% block content %}
